--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,11 @@ android {
             variant.setIgnore(true);
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -56,6 +61,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     compile "com.android.support:design:$rootProject.supportLibraryVersion"
     compile "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
+    compile "com.android.support:cardview-v7:$rootProject.supportLibraryVersion"
     compile 'com.google.code.gson:gson:2.8.0'
 
     // Dagger
@@ -73,7 +79,11 @@ dependencies {
     apt 'com.jakewharton:butterknife-compiler:8.5.1'
 
     // RX Java
-    compile 'io.reactivex.rxjava2:rxjava:2.0.6'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.1'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+//    compile('me.tatarka.rxloader:rxloader:1.1.0') {
+//        exclude group: 'com.netflix.rxjava', module: 'rxjava-android'
+//    }
     // Consider including Wharton's RX Binding
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
