--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,9 +4,9 @@ apply plugin: 'me.tatarka.retrolambda'
 
 repositories {
     mavenCentral()
-//    maven {
-//        url 'https://oss.sonatype.org/content/repositories/snapshots/'
-//    }
+    maven {
+        url 'https://oss.sonatype.org/content/repositories/snapshots/'
+    }
     jcenter()
 }
 
@@ -81,13 +81,32 @@ dependencies {
     // RX Java
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-//    compile('me.tatarka.rxloader:rxloader:1.1.0') {
-//        exclude group: 'com.netflix.rxjava', module: 'rxjava-android'
-//    }
-    // Consider including Wharton's RX Binding
+
+    // Testing
+//    testCompile 'junit:junit:4.12'
+    androidTestApt 'com.jakewharton:butterknife-compiler:8.5.1'
+    testApt 'com.jakewharton:butterknife-compiler:8.5.1'
+
+    androidTestCompile('com.android.support.test:runner:0.5', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
+
+    androidTestCompile('com.squareup.retrofit2:retrofit-mock:2.2.0', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+
+    androidTestCompile('com.squareup.assertj:assertj-android:1.1.1', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+
+    androidTestCompile('com.squareup.assertj:assertj-android-recyclerview-v7:1.1.1@aar', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+
+    mockCompile 'com.squareup.retrofit2:retrofit-mock:2.2.0'
+
 }
